--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,53 +5,33 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/vite": "^4.0.8",
-    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "emoji-picker-react": "^4.10.0",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.475.0",
-    "moment": "^2.30.1",
-    "next-themes": "^0.3.0",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
-    "react-cookie": "^7.1.4",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.2.1",
-    "react-lottie": "^1.2.4",
-    "react-lottie-player": "^2.0.0",
-    "react-router-dom": "^6.23.1",
-    "socket.io-client": "^4.7.5",
-    "sonner": "^1.5.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.5",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
   }
 }
