--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
     "tailwindcss-animate": "^1.0.7"
