--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,27 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.10.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
+    "moment": "^2.30.1",
+    "next-themes": "^0.3.0",
     "react": "^19.0.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.1.2",
+    "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
+    "react-lottie-player": "^2.0.0",
     "react-router-dom": "^6.26.1",
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
